--- a/style/main.scss
+++ b/style/main.scss
@@ -12,7 +12,28 @@
         background: #f1f1f1;
         border: 1px solid #e3e3e3;
         padding: 10px;
-        margin: 10px;
+        margin: 10px 0;
+
+        .album-name{
+            font-weight: bold;
+            margin-top: 5px;
+            min-height: 80px;
+        }
+
+        .image-container{
+            position:relative;
+            overflow:hidden;
+            padding-bottom:100%;
+
+            & > img{
+                position: absolute;
+                max-width: 95%;
+                max-height: 95%;
+                top: 50%;
+                left: 50%;
+                transform: translateX(-50%) translateY(-50%);
+            }
+        }
     }
 }
 
